// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildClusterIsAWSInstanceRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:dbc-c50dbe80-ed72.cloud.databricks.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "name": "dbc-c50dbe80-ed72.cloud.databricks.com",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0222-151525-vwdam92b",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autotermination_minutes": 20,
            "aws_attributes": Object {
              "availability": "SPOT_WITH_FALLBACK",
              "ebs_volume_count": 1,
              "ebs_volume_size": 100,
              "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              "first_on_demand": 1,
              "spot_bid_price_percent": 100,
              "zone_id": "us-east-1a",
            },
            "cluster_id": "0222-151525-vwdam92b",
            "cluster_name": "aws-test-databricks-cluster-1",
            "cluster_source": "UI",
            "creator_user_name": "stefan.virag@contractor.jupiterone.com",
            "custom_tags": Object {
              "ResourceClass": "SingleNode",
            },
            "default_tags": Object {
              "ClusterId": "0222-151525-vwdam92b",
              "ClusterName": "aws-test-databricks-cluster-1",
              "Creator": "stefan.virag@contractor.jupiterone.com",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {
              "disk_count": 1,
              "disk_size": 100,
              "disk_type": Object {
                "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              },
            },
            "driver_instance_source": Object {
              "node_type_id": "m4.large",
            },
            "driver_node_type_id": "m4.large",
            "enable_elastic_disk": true,
            "enable_local_disk_encryption": false,
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "m4.large",
            },
            "last_restarted_time": 1645629926186,
            "last_state_loss_time": 1645629926084,
            "node_type_id": "m4.large",
            "num_workers": 0,
            "spark_conf": Object {
              "spark.databricks.cluster.profile": "singleNode",
              "spark.master": "local[*, 4]",
            },
            "spark_context_id": 2759000291287089000,
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1645542925525,
            "state": "TERMINATED",
            "state_message": "Inactive cluster terminated (inactive for 20 minutes).",
            "terminated_time": 1645631107754,
            "termination_reason": Object {
              "code": "INACTIVITY",
              "parameters": Object {
                "inactivity_duration_min": "20",
              },
              "type": "SUCCESS",
            },
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": false,
      "autoTerminationMinutes": 20,
      "createdOn": 1645542925525,
      "creator": "stefan.virag@contractor.jupiterone.com",
      "displayName": "aws-test-databricks-cluster-1",
      "enableElasticDisk": true,
      "enableLocalDiskEncryption": false,
      "id": "0222-151525-vwdam92b",
      "initScriptsSafeMode": false,
      "name": "aws-test-databricks-cluster-1",
      "nodeTypeId": "m4.large",
      "state": "TERMINATED",
      "terminatedOn": 1645631107754,
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_cluster",
    "databricks_workspace_has_cluster",
    "databricks_cluster_is_aws_instance",
  ],
  "numCollectedEntities": 2,
}
`;

exports[`#buildClusterUserRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:dbc-c50dbe80-ed72.cloud.databricks.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "name": "dbc-c50dbe80-ed72.cloud.databricks.com",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:admins",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "admins",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "admins",
      "name": "admins",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:stefan.virag@contractor.jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "stefan.virag@contractor.jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "stefan.virag@contractor.jupiterone.com",
      "name": "stefan.virag@contractor.jupiterone.com",
      "username": "stefan.virag@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:austin.kelleher@jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "austin.kelleher@jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "austin.kelleher@jupiterone.com",
      "name": "austin.kelleher@jupiterone.com",
      "username": "austin.kelleher@jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:sam.andrus@jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "sam.andrus@jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "sam.andrus@jupiterone.com",
      "name": "sam.andrus@jupiterone.com",
      "username": "sam.andrus@jupiterone.com",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0222-151525-vwdam92b",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autotermination_minutes": 20,
            "aws_attributes": Object {
              "availability": "SPOT_WITH_FALLBACK",
              "ebs_volume_count": 1,
              "ebs_volume_size": 100,
              "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              "first_on_demand": 1,
              "spot_bid_price_percent": 100,
              "zone_id": "us-east-1a",
            },
            "cluster_id": "0222-151525-vwdam92b",
            "cluster_name": "aws-test-databricks-cluster-1",
            "cluster_source": "UI",
            "creator_user_name": "stefan.virag@contractor.jupiterone.com",
            "custom_tags": Object {
              "ResourceClass": "SingleNode",
            },
            "default_tags": Object {
              "ClusterId": "0222-151525-vwdam92b",
              "ClusterName": "aws-test-databricks-cluster-1",
              "Creator": "stefan.virag@contractor.jupiterone.com",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {
              "disk_count": 1,
              "disk_size": 100,
              "disk_type": Object {
                "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              },
            },
            "driver_instance_source": Object {
              "node_type_id": "m4.large",
            },
            "driver_node_type_id": "m4.large",
            "enable_elastic_disk": true,
            "enable_local_disk_encryption": false,
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "m4.large",
            },
            "last_restarted_time": 1645629926186,
            "last_state_loss_time": 1645629926084,
            "node_type_id": "m4.large",
            "num_workers": 0,
            "spark_conf": Object {
              "spark.databricks.cluster.profile": "singleNode",
              "spark.master": "local[*, 4]",
            },
            "spark_context_id": 2759000291287089000,
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1645542925525,
            "state": "TERMINATED",
            "state_message": "Inactive cluster terminated (inactive for 20 minutes).",
            "terminated_time": 1645631107754,
            "termination_reason": Object {
              "code": "INACTIVITY",
              "parameters": Object {
                "inactivity_duration_min": "20",
              },
              "type": "SUCCESS",
            },
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": false,
      "autoTerminationMinutes": 20,
      "createdOn": 1645542925525,
      "creator": "stefan.virag@contractor.jupiterone.com",
      "displayName": "aws-test-databricks-cluster-1",
      "enableElasticDisk": true,
      "enableLocalDiskEncryption": false,
      "id": "0222-151525-vwdam92b",
      "initScriptsSafeMode": false,
      "name": "aws-test-databricks-cluster-1",
      "nodeTypeId": "m4.large",
      "state": "TERMINATED",
      "terminatedOn": 1645631107754,
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_group",
    "databricks_workspace_has_group",
    "databricks_user",
    "databricks_group_has_user",
    "databricks_cluster",
    "databricks_workspace_has_cluster",
    "databricks_user_created_cluster",
  ],
  "numCollectedEntities": 6,
}
`;

exports[`#fetchClusters should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:dbc-c50dbe80-ed72.cloud.databricks.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "name": "dbc-c50dbe80-ed72.cloud.databricks.com",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "databricks_cluster:0222-151525-vwdam92b",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "autotermination_minutes": 20,
            "aws_attributes": Object {
              "availability": "SPOT_WITH_FALLBACK",
              "ebs_volume_count": 1,
              "ebs_volume_size": 100,
              "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              "first_on_demand": 1,
              "spot_bid_price_percent": 100,
              "zone_id": "us-east-1a",
            },
            "cluster_id": "0222-151525-vwdam92b",
            "cluster_name": "aws-test-databricks-cluster-1",
            "cluster_source": "UI",
            "creator_user_name": "stefan.virag@contractor.jupiterone.com",
            "custom_tags": Object {
              "ResourceClass": "SingleNode",
            },
            "default_tags": Object {
              "ClusterId": "0222-151525-vwdam92b",
              "ClusterName": "aws-test-databricks-cluster-1",
              "Creator": "stefan.virag@contractor.jupiterone.com",
              "Vendor": "Databricks",
            },
            "disk_spec": Object {
              "disk_count": 1,
              "disk_size": 100,
              "disk_type": Object {
                "ebs_volume_type": "GENERAL_PURPOSE_SSD",
              },
            },
            "driver_instance_source": Object {
              "node_type_id": "m4.large",
            },
            "driver_node_type_id": "m4.large",
            "enable_elastic_disk": true,
            "enable_local_disk_encryption": false,
            "init_scripts_safe_mode": false,
            "instance_source": Object {
              "node_type_id": "m4.large",
            },
            "last_restarted_time": 1645629926186,
            "last_state_loss_time": 1645629926084,
            "node_type_id": "m4.large",
            "num_workers": 0,
            "spark_conf": Object {
              "spark.databricks.cluster.profile": "singleNode",
              "spark.master": "local[*, 4]",
            },
            "spark_context_id": 2759000291287089000,
            "spark_env_vars": Object {
              "PYSPARK_PYTHON": "/databricks/python3/bin/python3",
            },
            "spark_version": "9.1.x-scala2.12",
            "start_time": 1645542925525,
            "state": "TERMINATED",
            "state_message": "Inactive cluster terminated (inactive for 20 minutes).",
            "terminated_time": 1645631107754,
            "termination_reason": Object {
              "code": "INACTIVITY",
              "parameters": Object {
                "inactivity_duration_min": "20",
              },
              "type": "SUCCESS",
            },
          },
        },
      ],
      "_type": "databricks_cluster",
      "active": false,
      "autoTerminationMinutes": 20,
      "createdOn": 1645542925525,
      "creator": "stefan.virag@contractor.jupiterone.com",
      "displayName": "aws-test-databricks-cluster-1",
      "enableElasticDisk": true,
      "enableLocalDiskEncryption": false,
      "id": "0222-151525-vwdam92b",
      "initScriptsSafeMode": false,
      "name": "aws-test-databricks-cluster-1",
      "nodeTypeId": "m4.large",
      "state": "TERMINATED",
      "terminatedOn": 1645631107754,
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_cluster",
    "databricks_workspace_has_cluster",
  ],
  "numCollectedEntities": 2,
}
`;
